--- a/style.css
+++ b/style.css
@@ -4,4 +4,19 @@ body{
     background: darkred;
     color:white;
 }
-
+.image2{
+    width:50%;
+    border-radius: 25%;
+    float:center;
+}
+.image1{
+    width:25%;
+    float:right;
+}
+.image3{
+    width:25%;
+    float:left;
+}
+.button{
+    font-style: Serif;
+}
